--- a/manifest.json
+++ b/manifest.json
@@ -18,6 +18,7 @@
   "content_scripts": [
     {
       "matches": ["https://app.ynab.com/*"],
+      "css": ["ynab-content.css"],
       "js": ["ynab-content.js"],
       "run_at": "document_end"
     }
